--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.18.0",
-    "babel-loader": "^6.2.7",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-class-properties": "^6.18.0",
+    "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.18.0",
     "bower": "^1.8.0",
     "browser-sync": "^2.11.1",
+    "browser-sync-webpack-plugin": "^1.1.4",
+    "css-loader": "^0.28.3",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
@@ -38,7 +42,13 @@
     "gulp-svgmin": "^1.2.2",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "tiny-lr": "^0.2.1"
+    "node-sass": "^4.5.3",
+    "postcss": "^6.0.1",
+    "resolve-url": "^0.2.1",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.1",
+    "tiny-lr": "^0.2.1",
+    "webpack": "^2.6.1"
   },
   "homepage": "https://thesnug.io",
   "keywords": [
