--- a/package.json
+++ b/package.json
@@ -1,44 +1,53 @@
 {
   "name": "snug-wp-starter",
   "description": "Starter WordPress theme for The Snug projects.",
-  "version": "2.0.1",
+  "version": "3.0.1",
   "author": "The Snug <development@thesnug.io>",
   "bugs": {
     "url": "https://github.com/thesnug/snug-wp-starter/issues"
   },
   "dependencies": {
-    "chosen-js": "^1.8.5"
+    "@babel/polyfill": "^7.10.1"
   },
   "devDependencies": {
-    "babel-core": "^6.18.0",
-    "babel-loader": "^7.1.4",
-    "babel-env": "^2.4.1",
-    "browser-sync": "^2.11.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-babel": "^7.0.1",
-    "gulp-cache": "^1.0.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^5.5.0",
-    "gulp-eslint": "^4.0.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-karma": "0.0.5",
-    "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.1",
-    "gulp-sass-lint": "^1.3.2",
-    "gulp-sourcemaps": "^2.4.0",
-    "gulp-svgmin": "^1.2.2",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.7",
-    "tiny-lr": "^1.1.1"
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "autoprefixer": "^9.8.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "browser-sync": "^2.26.7",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.2",
+    "css-loader": "^3.5.3",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-wordpress": "^2.0.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^2.0.5",
+    "sass": "^1.26.8",
+    "sass-loader": "^8.0.2",
+    "stylelint": "^13.6.0",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-wordpress": "^17.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.17.2",
+    "stylelint-webpack-plugin": "^2.0.0",
+    "svg-inline-loader": "^0.8.2",
+    "svgo": "^1.3.2",
+    "svgo-loader": "^2.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "homepage": "https://thesnug.io",
   "keywords": [
@@ -51,7 +60,12 @@
     "url": "https://github.com/thesnug/snug-wp-starter"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp"
+    "build": "webpack --mode=production",
+    "dev": "webpack --watch",
+    "eslint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "eslint:fix": "eslint \"src/**/*.{js,jsx}\" --quiet --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx,scss}\"",
+    "stylelint": "stylelint \"src/**/*.{css,scss}\"",
+    "stylelint:fix": "stylelint \"src/**/*.{css,scss}\" --fix"
   }
 }
