--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
