--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snug-wp-starter",
   "description": "Starter WordPress theme for The Snug projects.",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "author": "The Snug <development@thesnug.io>",
   "bugs": {
     "url": "https://github.com/thesnug/snug-wp-starter/issues"
@@ -10,13 +10,13 @@
     "@babel/polyfill": "^7.10.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.1",
+    "@babel/cli": "^7.14.8",
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "autoprefixer": "^9.8.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.27.4",
     "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.2",
@@ -34,7 +34,6 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
-    "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
     "stylelint": "^13.6.0",
     "stylelint-config-recommended-scss": "^4.2.0",
@@ -45,10 +44,10 @@
     "svg-inline-loader": "^0.8.2",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.43.0",
+    "terser-webpack-plugin": "^4.2.3",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "homepage": "https://thesnug.io",
   "keywords": [
