--- a/package.json
+++ b/package.json
@@ -7,47 +7,27 @@
     "url": "https://github.com/thesnug/snug-wp-starter/issues"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.10.1"
+    "@babel/polyfill": "^7.10.1",
+    "parcel": "^2.6.2",
+    "parcel-bundler": "^1.12.5",
+    "parcel-namer-without-hash": "^0.0.1",
+    "postcss": "^8.4.14"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "autoprefixer": "^9.8.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "browser-sync": "^2.27.4",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.2",
-    "css-loader": "^3.5.3",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
+    "@babel/eslint-parser": "^7.16.0",
+    "@parcel/resolver-glob": "^2.6.2",
+    "@parcel/transformer-sass": "^2.6.2",
+    "browser-sync": "^2.27.7",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-config-wordpress": "^2.0.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^2.0.5",
-    "sass-loader": "^8.0.2",
-    "stylelint": "^13.6.0",
-    "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-config-wordpress": "^17.0.0",
-    "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.17.2",
-    "stylelint-webpack-plugin": "^2.0.0",
-    "svg-inline-loader": "^0.8.2",
-    "svgo": "^1.3.2",
-    "svgo-loader": "^2.2.1",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.2"
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
+    "imagemin-webp": "^6.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "sass": "^1.43.4"
   },
   "homepage": "https://thesnug.io",
   "keywords": [
@@ -60,12 +40,7 @@
     "url": "https://github.com/thesnug/snug-wp-starter"
   },
   "scripts": {
-    "build": "webpack --mode=production",
-    "dev": "webpack --watch",
-    "eslint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "eslint:fix": "eslint \"src/**/*.{js,jsx}\" --quiet --fix",
-    "format": "prettier --write \"src/**/*.{js,jsx,scss}\"",
-    "stylelint": "stylelint \"src/**/*.{css,scss}\"",
-    "stylelint:fix": "stylelint \"src/**/*.{css,scss}\" --fix"
+    "build": "parcel build ./src/application.js",
+    "dev": "parcel watch ./src/application.js"
   }
 }
